--- a/FunWithFlags/Base.lproj/Main.storyboard
+++ b/FunWithFlags/Base.lproj/Main.storyboard
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -18,70 +22,44 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iig-ys-e6h"/>
+                            <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iig-ys-e6h">
+                                <rect key="frame" x="27.5" y="20" width="320" height="216"/>
+                            </pickerView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Bnt-p9-RYH">
+                                <rect key="frame" x="158" y="278" width="59" height="30"/>
                                 <state key="normal" title="See Flag"/>
                                 <connections>
                                     <action selector="flagButtonPress:" destination="BYZ-38-t0r" eventType="touchUpInside" id="y4w-vP-q3e"/>
-                                    <segue destination="aVl-qS-1JF" kind="presentation" id="uQM-06-KcG"/>
                                 </connections>
                             </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="vmA-uk-Em3">
+                                <rect key="frame" x="0.0" y="449" width="375" height="218"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="218" id="BLQ-g7-R8z"/>
+                                    <constraint firstAttribute="width" constant="375" id="Eym-ts-YeK"/>
+                                    <constraint firstAttribute="width" secondItem="vmA-uk-Em3" secondAttribute="height" multiplier="375:218" id="iAc-wF-pMa"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="Bnt-p9-RYH" firstAttribute="top" secondItem="iig-ys-e6h" secondAttribute="bottom" constant="42" id="0Mf-qs-qPQ"/>
+                            <constraint firstItem="vmA-uk-Em3" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="6qZ-Hj-btV"/>
                             <constraint firstItem="iig-ys-e6h" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="WTB-EW-jdP"/>
                             <constraint firstItem="iig-ys-e6h" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="Yhy-VI-Y4a"/>
+                            <constraint firstAttribute="trailing" secondItem="vmA-uk-Em3" secondAttribute="trailing" id="aHS-gV-bat"/>
                             <constraint firstItem="Bnt-p9-RYH" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="emj-db-gNq"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="vmA-uk-Em3" secondAttribute="bottom" id="nLS-wS-dYJ"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="countrySelector" destination="iig-ys-e6h" id="Vo6-LU-DXX"/>
-                        <outlet property="flagImages" destination="Jly-Qi-Gc6" id="UFL-LV-KMM"/>
+                        <outlet property="flagView" destination="vmA-uk-Em3" id="a7b-7X-yYd"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="64.799999999999997" y="124.58770614692655"/>
-        </scene>
-        <!--Flag Controller-->
-        <scene sceneID="PcI-5f-FtL">
-            <objects>
-                <viewController id="aVl-qS-1JF" customClass="FlagController" customModule="FunWithFlags" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="s5L-N4-mSR"/>
-                        <viewControllerLayoutGuide type="bottom" id="eGC-o5-3Sc"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="zop-5m-Ebu">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eN7-LK-mdZ">
-                                <frame key="frameInset" minX="139" minY="531" width="96" height="77"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                <state key="normal" title="Done"/>
-                                <connections>
-                                    <action selector="Done:" destination="aVl-qS-1JF" eventType="touchUpInside" id="fhY-Uj-aG9"/>
-                                </connections>
-                            </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Jly-Qi-Gc6">
-                                <frame key="frameInset" minY="116" width="375" height="226"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
-                        </subviews>
-                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="eGC-o5-3Sc" firstAttribute="top" secondItem="eN7-LK-mdZ" secondAttribute="bottom" constant="59" id="97o-KI-MfL"/>
-                            <constraint firstItem="eN7-LK-mdZ" firstAttribute="centerX" secondItem="zop-5m-Ebu" secondAttribute="centerX" id="xHW-4a-Ej4"/>
-                        </constraints>
-                    </view>
-                    <connections>
-                        <outlet property="flagImage" destination="Jly-Qi-Gc6" id="PnK-on-s3O"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="bxQ-Qh-6fA" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="64.799999999999997" y="959.37031484257875"/>
         </scene>
     </scenes>
 </document>
